force-app/main/default/objects/Access_to_Thesis_Consent__c/Access_to_Thesis_Consent__c.object-meta.xml
<CustomObject>
    <label>Access to Thesis Consent Form</label>
    <nameField>
        <displayFormat>ATC-{00000}</displayFormat>
        <label>Form ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access to Thesis Consent Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>