force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Additional_comments__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Additional_comments__c</fullName>
    <label>Additional comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>