force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Approval_Page_Instruction__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Approval_Page_Instruction__c</fullName>
    <formula>&quot;This is a summary view. To view the full ATC form, click on the Form ID link. &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Page Instruction</label>
    <type>Text</type>
</CustomField>