force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_BGR_Approver__c.field-meta.xml
<CustomField>
    <fullName>I_RS_BGR_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Chair of the Board of Graduate Research or delegate who can approve on behalf of the BGR</inlineHelpText>
    <label>BGR Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ATC_Forms_BGR_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>