force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Blank_Space__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Blank_Space__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_</label>
    <type>Text</type>
</CustomField>