force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Candidate_Declaration__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Candidate_Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please tick the box to agree with the above declaration if you are satisfied that you have all permissions in place for any material in your thesis or have removed any material for which you do not have permission in a second redacted version.</inlineHelpText>
    <label>I agree</label>
    <type>Checkbox</type>
</CustomField>