force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Candidate_Declaration_Text__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Candidate_Declaration_Text__c</fullName>
    <formula>&quot;• I warrant that the version of my thesis to be made openly available, as uploaded to the Repository, does not infringe the copyright or license conditions of any person or organisation, and&quot; + BR() +
&quot;• I certify that the electronic version of my thesis, as uploaded to the Repository, is a direct equivalent of the version of my thesis as approved by the Academic Board, subject to any exclusions made for copyright reasons&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Declaration</label>
    <type>Text</type>
</CustomField>