force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Candidate_Email__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Candidate_Email__c</fullName>
    <description>Email to use for comms to Candidates</description>
    <label>Candidate Email</label>
    <type>Email</type>
</CustomField>