force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Electronic_version_type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Electronic_version_type__c</fullName>
    <inlineHelpText>Pick ‘ redacted electronic version’ if you don’t have permission to include copyright-protected material in your published thesis / examinable works, otherwise choose ‘full electronic version’</inlineHelpText>
    <label>Which version will be published?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
                <label>Full Electronic Version</label>
            </value>
            <value>
                <fullName>Redacted Electronic Version</fullName>
                <label>Redacted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>