force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Embargo_Approved_Until__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Embargo_Approved_Until__c</fullName>
    <inlineHelpText>Date the approved embargo will expire</inlineHelpText>
    <label>Embargo Approved Until</label>
    <type>Date</type>
</CustomField>