force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Embargo_period_requested__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Embargo_period_requested__c</fullName>
    <inlineHelpText>Please indicate how long you are requesting an embargo for</inlineHelpText>
    <label>Embargo period requested</label>
    <length>50</length>
    <type>Text</type>
</CustomField>