force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Embargo_Reason_Commerical_IP__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Embargo_Reason_Commerical_IP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Other commercial-in-confidence, or intellectual property considerations</inlineHelpText>
    <label>Other commercial or IP considerations</label>
    <type>Checkbox</type>
</CustomField>