force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Embargo_Reason_Other_please_detail__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Embargo_Reason_Other_please_detail__c</fullName>
    <label>Other (please detail):</label>
    <type>TextArea</type>
</CustomField>