force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Embargo_Reason_Public_interest__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Embargo_Reason_Public_interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public interest</label>
    <type>Checkbox</type>
</CustomField>