force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Embargo_reason_pubs_or_patents__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Embargo_reason_pubs_or_patents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending publications or patents</label>
    <type>Checkbox</type>
</CustomField>