force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Embargo_Request_Justification__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Embargo_Request_Justification__c</fullName>
    <inlineHelpText>Please outline the reasons you are requesting an embargo for the specified time period</inlineHelpText>
    <label>Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>