force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Full_Electronic_Version__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Full_Electronic_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I grant La Trobe University non-exclusive, ongoing permission to reproduce and communicate the electronic version of my thesis, in all forms of media, now or hereafter known</inlineHelpText>
    <label>Full Electronic Version</label>
    <type>Checkbox</type>
</CustomField>