force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Graduate_Research_Examination_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Graduate_Research_Examination_ID__c</fullName>
    <inlineHelpText>Link to the candidate’s examination record</inlineHelpText>
    <label>Graduate Research Examination ID</label>
    <referenceTo>Graduate_Research_Examination__c</referenceTo>
    <relationshipLabel>Access to Thesis Consent Forms</relationshipLabel>
    <relationshipName>Access_to_Thesis_Consent_Forms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>