force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_I_grant_La_Trobe_University__c.field-meta.xml
<CustomField>
    <fullName>I_RS_I_grant_La_Trobe_University__c</fullName>
    <formula>CASE(

TEXT( I_RS_Electronic_version_type__c ), 

&quot;Full&quot;, &quot;I grant La Trobe University non-exclusive, ongoing permission to reproduce and communicate the electronic version of my thesis, in all forms of media, now or hereafter known&quot;, 

&quot;Redacted&quot;, &quot;I grant La Trobe University non-exclusive, ongoing permission to reproduce and communicate the redacted electronic version of my thesis, in all forms of media, now or hereafter known&quot;,

&quot;(Please specify Electronic version type&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publication Declaration</label>
    <type>Text</type>
</CustomField>