force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_New_Access_to_Thesis_Form_Tooltip__c.field-meta.xml
<CustomField>
    <fullName>I_RS_New_Access_to_Thesis_Form_Tooltip__c</fullName>
    <defaultValue>&quot;A new Access to Thesis Consent form will be created. You will be able to find it under the &apos;Access to Thesis Consent Forms&apos; section. Click Save to confirm.&quot;</defaultValue>
    <description>Appears on &apos;New Access to Thesis Form&apos; quick action on Graduate Research Examination object</description>
    <label>New Access to Thesis Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>