force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Publication_Declaration__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Publication_Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I agree</label>
    <type>Checkbox</type>
</CustomField>