force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Reason_s_for_the_embargo_picklist__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Reason_s_for_the_embargo_picklist__c</fullName>
    <label>Reason/s for the embargo (picklist)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending publications or patents</fullName>
            </value>
            <value>
                <fullName>Public interest</fullName>
            </value>
            <value>
                <fullName>Copyright</fullName>
            </value>
            <value>
                <fullName>Other commercial-in-confidence, or intellectual property considerations</fullName>
            </value>
            <value>
                <fullName>Ethical sensitivities</fullName>
            </value>
            <value>
                <fullName>Other (please detail):</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>