force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Reasons_for_the_embargo_header__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Reasons_for_the_embargo_header__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>REASONS FOR THE EMBARGO:</label>
    <type>Text</type>
</CustomField>