force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Redacted_Elec_Version_Declaration__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Redacted_Elec_Version_Declaration__c</fullName>
    <formula>&quot;I grant La Trobe University non-exclusive, ongoing permission to reproduce and communicate the redacted electronic version of my thesis, in all forms of media, now or hereafter known.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Redacted Electronic Version Declaration</label>
    <type>Text</type>
</CustomField>