force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Request_to_restrict_access__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Request_to_restrict_access__c</fullName>
    <formula>&quot;In certain circumstances you or your supervisor may request that public access to your thesis be restricted for a defined time period. This restriction, known as an embargo, is normally only for a designated period, usually 12 months or two years.&quot; + BR() + BR() +

&quot;If your embargo request is approved by the Chair of the Board of Graduate Research, your thesis will be held in a secure, inaccessible area of the Repository. At the conclusion of the approved embargo period, the thesis will revert to the open access repository unless a new application to extend the period of restricted access has been approved by the Chair, BGR.&quot; + BR() + BR() +

&quot;Reason/s for the embargo (Select all that apply)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request to restrict access if applicable</label>
    <type>Text</type>
</CustomField>