force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Select_one_of_the_following__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Select_one_of_the_following__c</fullName>
    <label>Grant LTU non-excl., ongoing permission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reproduce and communicate the electronic version of my thesis, in all forms of media, now or hereafter known</fullName>
            </value>
            <value>
                <fullName>Reproduce and communicate the redacted electronic version of my thesis, in all forms of media, now or hereafter known</fullName>
                <label>RReproduce and communicate the redacted electronic version of my thesis, in all forms of media, now or hereafter known</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>