force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>GRS Review</fullName>
            </value>
            <value>
                <fullName>Supervisor Approval</fullName>
            </value>
            <value>
                <fullName>Chair BGR Approval</fullName>
            </value>
            <value>
                <fullName>GRS Embargo Processing</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>