force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Student__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for email alerts that fire off this object</description>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Access to Thesis Consent Forms (Student)</relationshipLabel>
    <relationshipName>Access_to_Thesis_Consent_Forms_Student</relationshipName>
    <type>Lookup</type>
</CustomField>