force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Submit_to_GRS_Instructions__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Submit_to_GRS_Instructions__c</fullName>
    <formula>&quot;You are about to submit to GRS. We will review the information you&apos;ve provided. We will be in touch to provide you with instructions for the final submission of your thesis or if anything further is required.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submit to GRS - Instructions</label>
    <type>Text</type>
</CustomField>