force-app/main/default/objects/Access_to_Thesis_Consent__c/fields/I_RS_Supervisor_Approver__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Supervisor_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of the supervisor acting as the approver for the ATS, normally the principal supervisor unless unavailable</inlineHelpText>
    <label>Supervisor Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ATC_Forms_Supervisor_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>