force-app/main/default/objects/Access_to_Thesis_Consent__c/validationRules/Candidate_Declaration_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Candidate_Declaration_Required</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(I_RS_Status__c) &lt;&gt; &apos;Draft&apos; 

&amp;&amp;

I_RS_Candidate_Declaration__c = FALSE</errorConditionFormula>
    <errorDisplayField>I_RS_Candidate_Declaration__c</errorDisplayField>
    <errorMessage>Please provide a Candidate Declaration</errorMessage>
</ValidationRule>