force-app/main/default/objects/Access_to_Thesis_Consent__c/validationRules/Must_Provide_Elec_Version_Declaration.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Provide_Elec_Version_Declaration</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNEW() &amp;&amp; TEXT(I_RS_Status__c) &lt;&gt; &apos;Draft&apos; &amp;&amp;

(
(I_RS_Full_Electronic_Version__c = TRUE &amp;&amp;  I_RS_Redacted_Electronic_Version__c = TRUE)

||

(I_RS_Full_Electronic_Version__c = FALSE &amp;&amp;  I_RS_Redacted_Electronic_Version__c = FALSE)
)</errorConditionFormula>
    <errorMessage>Please provide precisely one Electronic Version Declaration</errorMessage>
</ValidationRule>