force-app/main/default/objects/Access_to_Thesis_Consent__c/validationRules/Only_GRS_can_edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_GRS_can_edit</fullName>
    <active>true</active>
    <description>Once certain Statuses have been reached, only GRS can edit</description>
    <errorConditionFormula>$User.I_RS_Is_Researcher_User__c = &quot;1&quot;  &amp;&amp;
TEXT(PRIORVALUE(I_RS_Status__c)) &lt;&gt; &apos;Draft&apos;</errorConditionFormula>
    <errorMessage>This form has been submitted so can’t be edited. Please contact GRS.</errorMessage>
</ValidationRule>